add contact info

--- a/blog-template.html
+++ b/blog-template.html
@@ -20,8 +20,7 @@
 
     <div class="container">
       <div class="content">
-        <h2>Blog Post Title</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat ligula feugiat mollis interdum. Morbi pretium tincidunt placerat. Nam dui tellus, posuere a condimentum ac, elementum ut elit. Maecenas vitae varius neque. Nunc rhoncus efficitur justo id venenatis. Nunc rutrum, massa quis sollicitudin ultrices, neque diam vestibulum dui, a luctus dolor nisl in neque. Donec sed ex convallis, malesuada enim a, scelerisque justo. Nunc rhoncus est elit, id posuere magna laoreet in. Aliquam posuere enim at elit lacinia, et finibus nisl imperdiet. Etiam faucibus tristique faucibus. Mauris ullamcorper quis orci vitae fermentum. Fusce mi arcu, commodo nec dui quis, suscipit blandit nisl. Curabitur vel magna sed lacus condimentum luctus. Phasellus ac efficitur mauris, placerat vestibulum erat. Proin luctus vestibulum elementum. Sed tortor nisl, eleifend et urna sit amet, sagittis vestibulum quam. Sed a vestibulum ipsum, quis lobortis tortor. Etiam odio eros, commodo vitae ex non, cursus volutpat ante. Suspendisse feugiat, tortor in aliquam vulputate, quam erat facilisis dui, quis feugiat leo ipsum mattis justo. Donec aliquam orci non faucibus ornare. Integer aliquam metus et dui vehicula, id euismod lectus ultrices. Nulla tristique, risus vel volutpat mollis, libero nulla euismod nisi, at auctor velit ante non ante. Vivamus euismod libero nulla, nec cursus ante faucibus nec.</p>
+
       </div>
       <div class="sidebar">
         <div class="recent">
@@ -54,9 +53,8 @@
     <div class="footer">
       <p id="contact">Contact Me</p>
       <ul class="contact-me">
-        <li>Phone Number</li>
-        <li>Email Address</li>
-        <li>Home Address</li>
+        <li>631-680-0165</li>
+        <li>liam.mccartney@gmail.com</li>
       </ul>
     </div>
 
