finish blog template

--- a/blog-template.html
+++ b/blog-template.html
@@ -23,28 +23,20 @@
 
       </div>
       <div class="sidebar">
-        <div class="recent">
-          <p>Recent Posts</p>
-          <ul>
-            <li><a href="#">Links to Recent Posts</a></li>
-            <li><a href="#">Links to Recent Posts</a></li>
-            <li><a href="#">Links to Recent Posts</a></li>
-          </ul>
-        </div>
         <div class="social">
           <p>Social Media</p>
           <ul>
             <li><a href="http://www.facebook.com/liam.a.mccartney">
-              <img src="imgs/fb-button.jpg">
+              Facebook
             </a></li>
             <li><a href="http://www.twitter.com/liammccartney">
-              <img src="imgs/twitter-button.png">
+              Twitter
             </a></li>
             <li><a href="http://www.github.com/liammccartney">
-              <img src="imgs/github-mark.png">
+              GitHub
             </a></li>
             <li><a href="http://www.linkedin.com/pub/liam-mccartney/50/274/774/">
-              <img src="imgs/linkedin.jpg">
+              LinkedIn
             </a></li>
           </ul>
         </div>
