add links to index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
     Hello DBC!
+    <a href="http://liammccartney.github.io/blog-posts/t1-compare-websites.html">11-Technical-Blog</a>
+    <a href="http://liammccartney.github.io/blog-posts/c1-chefs-kitchen.html">12-Cultural-Blog</a>
   </body>
 </html>
