add 5-Responsive-Design assignment

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
     Hello DBC!
     <a href="http://liammccartney.github.io/blog-posts/t1-compare-websites.html">11-Technical-Blog</a>
     <a href="http://liammccartney.github.io/blog-posts/c1-chefs-kitchen.html">12-Cultural-Blog</a>
+    <a href="http://liammccartney.github.io/starting-point.html">
+      5-Responsive Design Page</a>
   </body>
 </html>
