--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Liam McCartney's Blog</title>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css">
+  </head>
+
   <body>
-    Hello DBC!
+    <header>
+        <p id="author">Liam McCartney</p>
+        <img id="cover" src="imgs/bk-bridge.jpg">
+    </header>
+
+    <div id="container">
+      <section class="card" id="about">
+        <p>about me</p>
+      </section>
+
+      <section class="card" id="projects">
+        <p>projects</p>
+      </section>
+
+      <section class="card" id="blog">
+        <p>blog</p>
+      </section>
+
+    </div>
+
+    <footer>
+      <p id="contact">Contact Me</p>
+            <ul class="contact-me">
+              <li>631-680-0165</li>
+              <li>liam.mccartney@gmail.com</li>
+            </ul>
+    </footer>
+
+  </body>
+</html>
+
+
+    <!-- Hello DBC!
     <a href="http://liammccartney.github.io/blog-posts/t1-compare-websites.html">11-Technical-Blog</a>
     <a href="http://liammccartney.github.io/blog-posts/c1-chefs-kitchen.html">12-Cultural-Blog</a>
     <a href="http://liammccartney.github.io/starting-point.html">
-      5-Responsive Design Page</a>
-  </body>
-</html>
+      5-Responsive Design Page</a> -->
