MVP of liammccartney.github.io

--- a/blog-posts/c1-chefs-kitchen.html
+++ b/blog-posts/c1-chefs-kitchen.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Liam McCartney's Blog</title>
-    <link type="text/css" rel="stylesheet" href="../blog-stylesheet.css">
+    <link type="text/css" rel="stylesheet" href="blog-stylesheet.css">
   </head>
 
   <body>
