--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Liam McCartney's Blog</title>
+    <title>Liam McCartney</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css">
   </head>
 
@@ -11,18 +11,24 @@
         <img id="cover" src="imgs/bk-bridge.jpg">
     </header>
 
-    <div id="container">
-      <section class="card" id="about">
-        <p>about me</p>
-      </section>
+    <div id="tiles">
+      <a href="blog-posts/about-me.html">
+        <section class="card" id="about">
+          <p>about me</p>
+        </section>
+      </a>
 
-      <section class="card" id="projects">
-        <p>projects</p>
-      </section>
+      <a href="projects/project-index.html">
+        <section class="card" id="projects">
+          <p>projects</p>
+        </section>
+        </a>
 
-      <section class="card" id="blog">
-        <p>blog</p>
-      </section>
+      <a href="blog-posts/blog-index.html">
+        <section class="card" id="blog">
+          <p>my blog</p>
+        </section>
+      </a>
 
     </div>
 
@@ -30,7 +36,7 @@
       <p id="contact">Contact Me</p>
             <ul class="contact-me">
               <li>631-680-0165</li>
-              <li>liam.mccartney@gmail.com</li>
+              <li><a href="mailto:liam.mccartney@gmail.com">liam.mccartney@gmail.com</a></li>
             </ul>
     </footer>
 
