add reflection for GPS

--- a/projects/GPS-1.1/gps1.1.html
+++ b/projects/GPS-1.1/gps1.1.html
@@ -27,6 +27,9 @@ Write your names here:
       <p>DBC emphasizes skills, but communication skills as well. DBC believes pair programming is a great way to build your communication skills in preparation for your life as a professional programmer.</p>
       <h2>Driver vs Navigator</h2>
       <p>In pairing situations where there are two people one person will be designated as the driver, this person doing the actual coding on the page. The other person, the navigator, directs the driver and tells them what to code. Usually drivers and navigators will switch roles in the middle of the session.</p>
+
+      <h1>Reflection</h1>
+      <p>I was actually able to pair twice before this GPS. Which was helpful becayse it made me more comfortable with the process, and I wasn't as nervous as I probably would have been going into it cold. I did enjoy pairing. I like the driver/navigator relationship. It allows for one person to focus their attention on figuring out what to do next without having to worry about the actual execute of the code necessary. Sometimes this can be difficult, if the navigator is a quiet thinker, but as long as the driver asks questions and the navigator is able to explain themselves clearly, this process works like gangbusters.</p>
     </section>
 
     <footer>
