--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -12,9 +12,9 @@
         <p id="author">by liam mccartney</p>
       </div>
       <ul id="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="##">Blog</a></li>
-        <li><a href="###">About Me</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about-me.html">About Me</a></li>
+        <li><a href="../projects/project-index.html">Projects</a></li>
       </ul>
     </div>
 
