add link to new blog post

--- a/blog-posts/blog-index.html
+++ b/blog-posts/blog-index.html
@@ -24,6 +24,7 @@
         <ul>
           <li><a href="c1-chefs-kitchen.html">Kitchen vs Table</a></li>
           <li><a href="t1-compare-websites.html">Comparing Website Designs</a></li>
+          <li><a href="week2_technical.html">CSS: Classes vs IDs</a></li>
         </ul>
       </div>
       <div class="sidebar">
