add link to week 3 tech blog

--- a/blog-posts/blog-index.html
+++ b/blog-posts/blog-index.html
@@ -26,6 +26,7 @@
           <li><a href="t1-compare-websites.html">Comparing Website Designs</a></li>
           <li><a href="week2_technical.html">CSS: Classes vs IDs</a></li>
           <li><a href-"week3_cultural.html">Thinking Style and Learning</a></li>
+          <li><a href-"week3_technical.html">JavaScript: Pros and Cons</a></li>
         </ul>
       </div>
       <div class="sidebar">
