--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -19,17 +19,32 @@
     </div>
 
     <div class="container">
-      <div class="content">
-        <h1>Phase 0</h1>
-        <ul>
-          <li><a href="c1-chefs-kitchen.html">Kitchen vs Table</a></li>
-          <li><a href="t1-compare-websites.html">Comparing Website Designs</a></li>
-          <li><a href="week2_technical.html">CSS: Classes vs IDs</a></li>
-          <li><a href="week3_cultural.html">Thinking Style and Learning</a></li>
-          <li><a href="week3_technical.html">JavaScript: Pros and Cons</a></li>
-          <li><a href="week4_technical.html">Enumberable#Cycle</a></li>
-          <li><a href="week4_cultural_blog.html">Week 4 Cultural</a></li>
-        </ul>
+            <h2>Enumberable#cycle</h2>
+            <p>
+            `Enumberable#cycle` is a powerful method that can be use in a variety of ways.
+            At first glance it operates a lot like `each` but it actually extends beyond that.
+            `cycle` iterates through an array or a hash and passes each element (or key/value pair) to a block of code. If a limit or `break` condition is not supplied, it will cycle for ever.
+
+            <img src="../imgs/cycle-1.png">
+
+            You can set how many times you would like to cycle through like so:
+
+            <img src="../imgs/cycle-2.png">
+
+            You another way to exit the cycle is to set a break condition.
+
+            <img src="../imgs/cycle-3.png">
+
+            However there’s an even more useful way to use `cycle`.
+            When `cycle` does not receive either a limit or a code block, it returns an enumerator of the object it was called on.
+            This can then be manipulated used `next` and `rewind`.
+            <img src="../imgs/cycle-4.png">
+            <img src="../imgs/cycle-5.png">
+            <img src="../imgs/cycle-6.png">
+
+            If you turn a hash into an enumerator, then `next` will return a two element array of the next key/value pair
+            <img src="../imgs/cycle-7.png">
+          </p>
       </div>
       <div class="sidebar">
         <div class="social">
