--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -25,25 +25,25 @@
             At first glance it operates a lot like `each` but it actually extends beyond that.
             `cycle` iterates through an array or a hash and passes each element (or key/value pair) to a block of code. If a limit or `break` condition is not supplied, it will cycle for ever.</p>
 
-            <img src="../imgs/cycle-1.png">
+            <p><img src="../imgs/cycle-1.png"></p>
 
             <p>You can set how many times you would like to cycle through like so:</p>
 
-            <img src="../imgs/cycle-2.png">
+            <p><img src="../imgs/cycle-2.png"></p>
 
             <p>You another way to exit the cycle is to set a break condition.</p>
 
-            <img src="../imgs/cycle-3.png">
+            <p><img src="../imgs/cycle-3.png"></p>
 
             <p>However there’s an even more useful way to use `cycle`.
             When `cycle` does not receive either a limit or a code block, it returns an enumerator of the object it was called on.
             This can then be manipulated used `next` and `rewind`.</p>
-            <img src="../imgs/cycle-4.png">
-            <img src="../imgs/cycle-5.png">
-            <img src="../imgs/cycle-6.png">
+            <p><img src="../imgs/cycle-4.png"></p>
+            <p><img src="../imgs/cycle-5.png"></p>
+            <p><img src="../imgs/cycle-6.png"></p>
 
             <p>If you turn a hash into an enumerator, then `next` will return a two element array of the next key/value pair</p>
-            <img src="../imgs/cycle-7.png">
+            <p><img src="../imgs/cycle-7.png"></p>
           </p>
       </div>
       <div class="sidebar">
