--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -35,8 +35,8 @@
 
             <p><img src="../imgs/cycle-3.png"></p>
 
-            <p>However there’s an even more useful way to use `cycle`.
-            When `cycle` does not receive either a limit or a code block, it returns an enumerator of the object it was called on.
+            <p>However there’s an even more useful way to use `cycle`.</br>
+            When `cycle` does not receive either a limit or a code block, it returns an enumerator of the object it was called on.</br>
             This can then be manipulated used `next` and `rewind`.</p>
             <p><img src="../imgs/cycle-4.png"></p>
             <p><img src="../imgs/cycle-5.png"></p>
