--- a/blog-posts/blog-index.html
+++ b/blog-posts/blog-index.html
@@ -28,7 +28,7 @@
           <li><a href="week3_cultural.html">Thinking Style and Learning</a></li>
           <li><a href="week3_technical.html">JavaScript: Pros and Cons</a></li>
           <li><a href="week4_technical.html">Enumberable#Cycle</a></li>
-          <li><a href="week4_cultural_blog.html">Week 4 Cultural</a></li>
+          <li><a href="week4_cultural_blog.html">Problems in the Tech Industry</a></li>
         </ul>
       </div>
       <div class="sidebar">
