--- a/blog-posts/blog-index.html
+++ b/blog-posts/blog-index.html
@@ -30,7 +30,7 @@
           <li><a href="week4_technical.html">Enumberable#Cycle</a></li>
           <li><a href="week4_cultural_blog.html">Problems in the Tech Industry</a></li>
           <li><a href="week5_technical.html">Using Classes</a></li>
-          <li><a href="week5_cultural_blog.html">Pairing and Feedback</a></li>
+          <li><a href="week5_cultural.html">Pairing and Feedback</a></li>
         </ul>
       </div>
       <div class="sidebar">
