week 9 cultural blog

--- a/blog-posts/blog-index.html
+++ b/blog-posts/blog-index.html
@@ -37,6 +37,7 @@
           <li><a href="week7_technical.html">SQL vs NoSQL</a></li>
           <li><a href="week8_cultural_blog.html">Dealing With Conflict</a></li>
           <li><a href="week8_technical.html">What is Rails?</a></li>
+          <li><a href="week9_cultural_blog.html">Question Your Questions</a></li>
         </ul>
       </div>
       <div class="sidebar">
