adds structure for site

--- a/app/index.html
+++ b/app/index.html
@@ -24,18 +24,30 @@
 
     <div class="container">
 
-      <div class="row no-bg">
-        <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
-          <h1>i am <span>new</span> at this</h1>
+      <div class="row">
+        <div class='col-xs-12 col-sm-6 col-md-6 col-lg-6'>
+          <h1>i am <span class='highlight' id='about'>new</span> at this</h1>
           <p class='hide'>I graduated from DBC in January 2015</p>
-          <h1>but i make <span>things</span></h1>
+          <h1>but i make <span class='highlight' id='projects'>things</span></h1>
           <p class='hide'></p>
-          <h1>i am all over the internet</h1>
-          <h1>and sometimes i <span>ramble</span></h1>
+          <h1>i am all over the <span class='highlight' id='social'>internet</span></h1>
+          <h1>and sometimes i <span class='highlight' id='blog'>ramble</span></h1>
+        </div>
+        <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-6 col-sm-offset-6 col-md-offset-6 col-lg-offset-6'>
+          <div>
+          </div>
         </div>
       </div>
-
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <div class='col-xs-12 col-sm-6 col-md-4 col-lg-4 col-sm-offset-6 col-md-offset-8 col-lg-offset-8'>
+          <h1>liam mccartney</h1>
+        </div>
+      </div>
+    </footer>
+
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
