--- a/app/index.html
+++ b/app/index.html
@@ -26,15 +26,15 @@
 
       <div class="row">
         <div class='col-xs-12 col-sm-6 col-md-6 col-lg-6'>
-          <h1>i am <span class='highlight hvr-sweep-to-right' id='about'>new</span> at this</h1>
+          <h1>i am <span class='highlight hvr-sweep-to-right clickable' id='about'>new</span> at this</h1>
           <p class='hide'>I graduated from DBC in January 2015</p>
-          <h1>but i make <span class='highlight hvr-sweep-to-right' id='projects'>things</span></h1>
+          <h1>but i make <span class='highlight hvr-sweep-to-right clickable' id='projects'>things</span></h1>
           <p class='hide'></p>
-          <h1>i am all over the <span class='highlight hvr-sweep-to-right' id='social'>internet</span></h1>
-          <h1>and sometimes i <span class='highlight hvr-sweep-to-right' id='blog'>ramble</span></h1>
+          <h1>i am all over the <span class='highlight hvr-sweep-to-right clickable' id='social'>internet</span></h1>
+          <h1>and sometimes i <span class='highlight hvr-sweep-to-right clickable' id='blog'>ramble</span></h1>
         </div>
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-6 col-sm-offset-6 col-md-offset-6 col-lg-offset-6'>
-          <div>
+          <div class='content'>
           </div>
         </div>
       </div>
