--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/Hover/css/hover.css" />
+    <link rel="stylesheet" href="/bower_components/fontawesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
