--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
           <h1>i am all over the <span class='highlight hvr-sweep-to-right clickable' id='social'>internet</span></h1>
           <h1>and sometimes i <span class='highlight hvr-sweep-to-right clickable' id='blog'>ramble</span></h1>
         </div>
-        <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-6 col-sm-offset-6 col-md-offset-6 col-lg-offset-6'>
+        <div class='col-xs-12 col-sm-6 col-md-6 col-lg-6'>
           <div class='content'>
           </div>
         </div>
