adds class signature

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
     <footer class="footer">
       <div class="container">
         <div class='col-xs-12 col-sm-6 col-md-4 col-lg-4 col-sm-offset-6 col-md-offset-8 col-lg-offset-8'>
-          <h1><span class='highlight'>liam mccartney</span></h1>
+          <h1><span class='highlight signature'>liam mccartney</span></h1>
         </div>
       </div>
     </footer>
