--- a/index.html
+++ b/index.html
@@ -1,3 +1,58 @@
-<!doctype html> <html> <head> <meta charset=utf-8> <meta name=description> <meta name=viewport content="width=device-width, initial-scale=1"> <title>liammccartney github io</title>  <link rel=stylesheet href=styles/main.css> <script src=//fast.eager.io/lan7ueJ-aL.js></script> </head> <body class=no-bg> <!--[if lt IE 10]>
- <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
- <![endif]--> <div class=container> <div class=row> <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"> <h1>i am <span class=highlight id=about>new</span> at this</h1> <p class=hide>I graduated from DBC in January 2015</p> <h1>but i make <span class=highlight id=projects>things</span></h1> <p class=hide></p> <h1>i am all over the <span class=highlight id=social>internet</span></h1> <h1>and sometimes i <span class=highlight id=blog>ramble</span></h1> </div> <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-6 col-sm-offset-6 col-md-offset-6 col-lg-offset-6"> <div> </div> </div> </div> </div> <footer class=footer> <div class=container> <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-sm-offset-6 col-md-offset-8 col-lg-offset-8"> <h1>liam mccartney</h1> </div> </div> </footer> <script src=scripts/vendor.js></script> <script src=scripts/plugins.js></script> <script src=scripts/main.js></script> </body> </html> 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hi Katie</title>
+        <style>
+body{
+    background: #000;
+    padding-top: 10px;
+} 
+
+p{
+    color: lime; 
+    font-family: "Courier";
+    font-size: 20px;
+    margin: 10px 0 0 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 30em;
+    animation: type 4s steps(60, end); 
+}
+
+p:nth-child(2){
+    animation: type2 8s steps(60, end);
+}
+
+p a{
+    color: lime;
+    text-decoration: none;
+}
+
+span{
+    animation: blink 1s infinite;
+}
+
+      @keyframes type{ 
+          from { width: 0; } 
+      } 
+
+      @keyframes type2{
+          0%{width: 0;}
+          50%{width: 0;}
+          100%{ width: 100; } 
+      } 
+
+      @keyframes blink{
+          to{opacity: .0;}
+      }
+
+      ::selection{
+          background: black;
+      }
+        </style>
+    </head>
+    <body>
+        <p>Hey Katie! I made this to impress you</p>
+    </body>
+</html>
+
